--- a/project/css/style.css
+++ b/project/css/style.css
@@ -3,23 +3,168 @@
     padding: 0;
 }
 
+.background-image {
+    background: url(../image/background-image.jpg) center top no-repeat;
+    background-attachment: fixed;
+}
+
 .header {
-    background-color: aqua;
-    width: 80%;
-    height: 100px;
-    margin: 0 auto;
+    width: 100%;
+    height: 70px;
+    background-color: black;
+    position: fixed;
+    top: 0px;
+    z-index: 10;
 }
 
 .body {
-    background-color: pink;
-    width: 80%;
-    height: 500px;
+    position: relative;
+}
+
+.logo {
+    background: url(../image/logo.jpg) center top no-repeat;
+    width: 155px;
+    height: 70px;
+    display: inline-block;
+    vertical-align: middle;
+    float: left;
+}
+
+#nav {
+    float: right;
+}
+
+#tb {
+    float: right;
+    list-style: none;
+}
+
+#tb li {
+    float: left;
+    width: 120px;
+    line-height: 70px;
+    font-size: 22px;
+}
+
+ul li {
+    text-align: center;
+    list-style: none;
+}
+
+#nav li a {
+    color: white;
+    text-decoration: none;
+}
+
+#nav #login {
+    float: right;
+    background-color: #961884;
+}
+
+#nav #login a {
+    color: white;
+    line-height: 70px;
+    text-decoration: none;
+}
+
+.body #w_login {
+    width: 650px;
+    height: 330px;
+    position: relative;
+    top: 300px;
+    text-align: center;
+}
+
+#home_logo {}
+
+.body .u_login {
+    width: 298px;
+    height: 68px;
+    font-size: 26px;
+    border: none;
+    background: url("../image/btn_login.png");
+}
+
+.body .u_registe {
+    width: 298px;
+    height: 68px;
+    font-size: 26px;
+    border: none;
+    background: url("../image/btn_member.png");
+}
+
+.body #home_image {
+    width: 100%;
+    height: 750px;
+}
+
+.body #home_content {
+    width: 100%;
+    height: 1000px;
+    background: url("../image/content_bg.png") repeat center rgba(0, 0, 0, 0.3);
+}
+
+.body #y_logo {
+    float: right;
+    padding-right: 50px;
+}
+
+.body #title {
+    font-size: 40px;
+    color: white;
+    text-align: center;
+}
+
+.body #about {
+    width: 100%;
+    height: 1000px;
+    background: url("../image/bg_chara_01.png") left 20px no-repeat, url("../image/bg_chara_02.png") right 20px no-repeat, url("../image/bg_about_top.png") center top no-repeat, url("../image/bg_about.png") 0px 20px no-repeat;
+    text-align: center;
+}
+
+.body #tlt_logo {
+    margin-top: 60px;
+}
+
+.body #a_text {
+    margin: 60px auto;
+    font-size: 20px;
+    text-align: center;
+}
+
+.body #a_ul {
+    display: flex;
+    justify-content: center;
+}
+
+.body #a_ul li {
+    margin-right: 20px;
+}
+
+.body #a_ul img {
+    width: auto;
+    max-width: 98%;
+    height: auto;
+}
+
+.body #u_text {
     margin: 0 auto;
+    padding: 30px;
+    height: 170px;
+    border: 1px solid #000000;
+    /* width: 80%; */
+    background: rgba(175, 210, 224, 0.8);
+    font-size: 20px;
+}
+
+.body #and_more {
+    width: 100%;
+    height: 500px;
 }
 
 .footer {
-    background-color: blue;
-    width: 80%;
-    height: 200px;
-    margin: 0 auto;
+    width: 100%;
+    height: 500px;
+    background: url("../image/bg_footer_chara.png")right bottom no-repeat #000;
+    padding: 50px 0;
 }
